2008-12-13  Claude Paroz  <claude@2xlibre.net>

	* common/views.py: Add site_register and activate_account views to support
	registration.
	* media/css/main.css: Add help and errorlist classes for forms display.
	* people/forms.py: New RegistrationForm class.
	* people/models.py: New activation_key field to support registration.
	* people/urls.py: More precise matches with 'begin of line' (^).
	* templates/error.html: Added general-purpose error template.
	* templates/login.html:
	* templates/logout_form.html: Externalize logout form.
	* templates/people/person_detail.html: Allow logout from 'profile'
	template.
	* templates/register.html:
	* templates/register_success.html: New templates for registration.
	* urls.py: Add registration urls.

2008-12-12  Claude Paroz  <claude@2xlibre.net>

	* people/forms.py: Form to enable a person to join a team as translator.
	* people/urls.py:
	* people/views.py: Replace generic view for 'person' to be able to handle
	team membership form.
	* stats/models.py: Typo in comment.
	* teams/forms.py: Form to edit membership status.
	* teams/models.py: Enrich team API with membership functions. Add new Role
	class to store membership info.
	* teams/views.py: Prepare team membership content and handle form post
	(change membership).
	* templates/people/person_detail.html: Add team membership and join form.
	* templates/teams/team_detail.html: Add team membership display and form.

2008-12-09  Claude Paroz  <claude@2xlibre.net>

	* media/css/rtl.css: Improved RTL display.
	* stats/models.py: get_lang() was not fully translated.
	* templates/release_detail.html:
	* templates/stats_show.html: graphs alignment depends on language
	direction.

2008-12-09  Claude Paroz  <claude@2xlibre.net>

	* templates/base.html: LANGUAGE_CODE and LANGUAGE_BIDI are offered
	through RequestContext.

2008-12-08  Claude Paroz  <claude@2xlibre.net>

	* people/models.py:
	* teams/models.py: Use EmailField for email content fields.