@@ -13,5 +13,6 @@ urlpatterns = patterns('',
     url(r'^$', 'django.views.generic.list_detail.object_list', dict(info_dict_list), 'persons'),                    
     url(r'^(?P<object_id>\d+)/$', 'people.views.person_detail_from_id', name='person'),
     # equivalent to the previous, but using username instead of user pk
-    url(r'^(?P<slug>\w+)/$', 'people.views.person_detail_from_username', name='person'),
+    # FIXME The name isn't unique ('person')!
+    url(r'^(?P<slug>\w+)/$', 'people.views.person_detail_from_username', name='person')
 )
