@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% trans "GNOME Modules" %} {% endblock %}
+{% block title %}{% trans "GNOME Modules" %}{% endblock %}
 
 {% block content %}
 <div class="mainpage">
